filled degibbs section

--- a/december_15.ipynb
+++ b/december_15.ipynb
@@ -174,7 +174,8 @@
     "It is very convenient because it doesnt require to estimate the level of noise before, doesnt require masking and it doesnt blur the image.  \n",
     "It is a PCA thresholding type of denoising (more later).  \n",
     "In a nutshell, it takes small 5x5x5 blocks in space across all bvecs and exploit similarity + known properties of random noise.  \n",
-    "There are no relevant flags to change, default parameter are good. I am only using the -noise flag to output the estimated noise levels (standard deviations of a normal distribution in each 5x5x5 block)\n",
+    "There are no relevant flags to change, default parameter are good. I am only using the -noise flag to output the estimated noise levels (standard deviations of a normal distribution in each 5x5x5 block)  \n",
+    "If you have a very large number of diffusion directions, you might need to use a bigger windows like 7x7x7 by adding the flag '-extent 7'. This is because you need more voxel in your windows than the amount of image you have in the 4th dimension. So for instance the default 5x5x5 kernel has 5^3 = 125 voxels, so its enough for the the 70 volumes we have.  \n",
     "#### Quality control\n",
     "- When looking at the noise that was removed, there should not be obvious anatomical structure apart from ventricule and outline of the brain/skull.  \n",
     "- When looking at the map of sigma noise level, its should be relatively smooth with higher values in the center.  \n",
@@ -326,27 +327,47 @@
    "metadata": {},
    "source": [
     "#### What are we correcting?\n",
-    "  \n",
+    "We are correcting the gibbs ringing artefact.  \n",
     "#### Why does this happen?\n",
-    "\n",
+    "Since MRI acquisition is based on the (finite) fourier space of the image, sharp edges are misrepresented.  \n",
     "#### What if we ignore it?\n",
-    "\n",
+    "Gibbs ringing looks like noise that follow the shape of edges and fade as you get away from them, it will bias estimation near edges.  \n",
     "#### Why correct it now?\n",
-    " \n",
+    "Since ringing has a very specific shape, you need to corect it before the image is interpolated.  \n",
     "#### correction tool: mrdegibbs (2D version)\n",
-    "\n",
+    "mrdegibbs is the gibbs ringing correction tool from the MRtrix software.  \n",
+    "We are using the default one which is a 2D version of the tool. It works one slice at the time and it is IMPORTANT to specify which axes of the image where the true slice orientation from the acquisition. Since gibbs ringing is a very specific acquisition related artefact, It will NOT work in the wrong orientation. The slice encoding orientation is encoded in the DICOM header, when we ran \"mrinfo\" on the DICOM previously, it showed \"SliceEncodingDirection: k\" in the extra information, this mean that the slice encoding direction is the 3rd axe (it goes (i, j, k)), therefore we will run the tool on every (i, j) 2D slice.  \n",
+    "The tool has a -axes flag to specify this, \"-axes 0,1\" in this case (because they start counting at 0).\n",
     "#### Quality control\n",
-    "\n",
+    "- When looking at the image of the removed ringing (residual), it should look like the edges of the brain, the skull, the ventricule and other features with large intensity change with oscilliating \"ghost\" edges fading away as they get more distant from the true edge.\n",
     "#### Degibbsing can introduce negative values in the image, proper care (like clipping them to 0) will be required later\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# mrdegibbs $SUBJECTDIR'preprocessing/dwi_denoise.nii.gz' \\\n",
+      "' \\         $SUBJECTDIR'preprocessing/dwi_denoise_degibbs.nii.gz'\n",
+      "#           -axes 0,1\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": []
+    }
+   ],
    "source": [
-    "in mrinfo: \n",
-    "SliceEncodingDirection: k \n",
-    "this is 3rd dimension (i, j, k)"
+    "mrdegibbs $SUBJECTDIR'preprocessing/dwi_denoise.nii.gz' \\\n",
+    "          $SUBJECTDIR'preprocessing/dwi_denoise_degibbs.nii.gz' \\\n",
+    "          -axes 0,1"
    ]
   },
   {
@@ -354,21 +375,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# As before, we compute residuals\n",
+    "mrcalc $SUBJECTDIR'preprocessing/dwi_denoise.nii.gz' \\\n",
+    "       $SUBJECTDIR'preprocessing/dwi_denoise_degibbs.nii.gz' \\\n",
+    "       -subtract $SUBJECTDIR'preprocessing/dwi_denoise_degibbs_residual.nii.gz'"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# We also compute absolute residual (which are less usuful for degibbs)\n",
+    "mrabs $SUBJECTDIR'preprocessing/dwi_denoise_degibbs_residual.nii.gz' \\\n",
+    "      $SUBJECTDIR'preprocessing/dwi_denoise_degibbs_ABSresidual.nii.gz'"
+   ]
   },
   {
    "cell_type": "code",
