--- a/december_15.ipynb
+++ b/december_15.ipynb
@@ -281,7 +281,7 @@
    "metadata": {},
    "source": [
     "### MRtrix viewer: mrview\n",
-    "mrview is a good viewer for QC (better then fsleyes) because its really simple and fast to switch between images (pageUp and pageDown keyboard keys cycle through all the opened images).  \n",
+    "mrview is a good viewer for QC (better than fsleyes) because its really simple and fast to switch between images (pageUp and pageDown keyboard keys cycle through all the opened images).  \n",
     "Typical QC use-case:  \n",
     "mrview image_before.nii.gz image_after.nii.gz  \n",
     "Other useful keyboard shortcut:  \n",
@@ -327,19 +327,21 @@
    "metadata": {},
    "source": [
     "#### What are we correcting?\n",
-    "We are correcting the gibbs ringing artefact.  \n",
+    "We are correcting the gibbs ringing artefact which is a type or \"oscilliating ghosting\" of the edges.  \n",
     "#### Why does this happen?\n",
     "Since MRI acquisition is based on the (finite) fourier space of the image, sharp edges are misrepresented.  \n",
     "#### What if we ignore it?\n",
     "Gibbs ringing looks like noise that follow the shape of edges and fade as you get away from them, it will bias estimation near edges.  \n",
     "#### Why correct it now?\n",
-    "Since ringing has a very specific shape, you need to corect it before the image is interpolated.  \n",
+    "Since ringing has a very specific \"shape\" based on the original acquisition matrix, you need to correct it before the image is interpolated.  \n",
     "#### correction tool: mrdegibbs (2D version)\n",
     "mrdegibbs is the gibbs ringing correction tool from the MRtrix software.  \n",
-    "We are using the default one which is a 2D version of the tool. It works one slice at the time and it is IMPORTANT to specify which axes of the image where the true slice orientation from the acquisition. Since gibbs ringing is a very specific acquisition related artefact, It will NOT work in the wrong orientation. The slice encoding orientation is encoded in the DICOM header, when we ran \"mrinfo\" on the DICOM previously, it showed \"SliceEncodingDirection: k\" in the extra information, this mean that the slice encoding direction is the 3rd axe (it goes (i, j, k)), therefore we will run the tool on every (i, j) 2D slice.  \n",
+    "We are using the default one which is a 2D version of the tool. It works one slice at the time and it is IMPORTANT to specify which axes of the image where the true slice orientation from the acquisition. Since gibbs ringing is a very specific acquisition related artefact, It will NOT work in the wrong orientation.  \n",
+    "The slice encoding orientation is encoded in the DICOM header, when we ran \"mrinfo\" on the DICOM previously, it showed \"SliceEncodingDirection: k\" in the extra information, this mean that the slice encoding direction is the 3rd axe (it goes (i, j, k)), therefore we will run the tool on every (i,j) 2D slice.  \n",
     "The tool has a -axes flag to specify this, \"-axes 0,1\" in this case (because they start counting at 0).\n",
     "#### Quality control\n",
-    "- When looking at the image of the removed ringing (residual), it should look like the edges of the brain, the skull, the ventricule and other features with large intensity change with oscilliating \"ghost\" edges fading away as they get more distant from the true edge.\n",
+    "- When looking at the image of the removed ringing (residual), it should look like the edges of the brain, the skull, the ventricule and other features with large intensity change with oscilliating \"ghost\" edges fading away as they get more distant from the true edge.  \n",
+    "\n",
     "#### Degibbsing can introduce negative values in the image, proper care (like clipping them to 0) will be required later\n"
    ]
   },
@@ -372,9 +374,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# # As before, we compute residuals\n",
+      "# mrcalc $SUBJECTDIR'preprocessing/dwi_denoise.nii.gz' \\\n",
+      "\u001b[A\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[K\\\n",
+      "_residual.nii.gz't $SUBJECTDIR'preprocessing/dwi_denoise_degibbs_\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": []
+    }
+   ],
    "source": [
     "# As before, we compute residuals\n",
     "mrcalc $SUBJECTDIR'preprocessing/dwi_denoise.nii.gz' \\\n",
@@ -384,9 +403,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " degibbs)so compute absolute residual (which are less usuful for \n",
+      "ii.gz' \\$SUBJECTDIR'preprocessing/dwi_denoise_degibbs_residual.ni\n",
+      "l.nii.gz'SUBJECTDIR'preprocessing/dwi_denoise_degibbs_ABSresidual\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": []
+    }
+   ],
    "source": [
     "# We also compute absolute residual (which are less usuful for degibbs)\n",
     "mrabs $SUBJECTDIR'preprocessing/dwi_denoise_degibbs_residual.nii.gz' \\\n",
