--- a/january_20.ipynb
+++ b/january_20.ipynb
@@ -208,9 +208,18 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "\n",
+    "dwigradcheck dwi_denoise_degibbs.nii.gz \\\n",
+    "    -mask mask_for_eddy.nii.gz \\\n",
+    "    -fslgrad bvecs bvals \\\n",
+    "    -export_grad_fsl bvecs_corrected bvals_corrected \\\n",
+    "    -number 1000"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -259,7 +268,7 @@
    "outputs": [],
    "source": [
     "# the typical topup call\n",
-    "# --imain: the input AP Pa image\n",
+    "# --imain: the input AP PA image\n",
     "# --datain: the pe_table\n",
     "# --out: a prefix name for all the topup output files\n",
     "# --iout: a name for the topup corrected b0_AP_PA image\n",
@@ -374,7 +383,7 @@
     "eddy is the FSL tool to estimate and correct the eddy current induced distorsion. It also estimate and correct for subject motion.  \n",
     "Eddy uses the fact that dwi with approximatively inverse bvec directions (like (x y z) and (-x -y -z) ) have approximatively the same diffusion contrast (diffusion is antipodally symmetric) but different eddy-current induced distorsions.  \n",
     "It works optimally when the set of bvec direction is design to span a full sphere instead of just half a sphere (which is sadly common, because of the antipodal symmetry).  \n",
-    "Similar to topup, its uses two parameters textfile that we obtained from the initial dicom conversion (the eddy indices and the eddy index).  \n",
+    "Similar to topup, its uses two parameters textfile that we obtained from the initial dicom conversion (the eddy indices and the eddy config).  \n",
     "The parameters are fairly self explanatory appart from:  \n",
     "- \"--data_is_shelled\" flag which tells eddy that our data lives a shell of the same bvalue. This flag is neccesary because sometimes the bvals are slightly different between the dwi because of rounding and this will confuse eddy if we dont force it to consider it as a single bval shell.  \n",
     "- \"--dont_peas\" flag which tell eddy not to run the \"Post Eddy Alignment of Shells\" which is a type of registration between the shells when you have multiple bvalues which I don't find very useful or stable.\n",
@@ -494,11 +503,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "run eddyqc or something"
+   ]
   },
   {
    "cell_type": "code",
