added feb17: ants registration and csd fitting

--- a/january_27.ipynb
+++ b/january_27.ipynb
@@ -276,8 +276,25 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MNIFA='/afs/cbs.mpg.de/software/fsl/6.0.3/ubuntu-bionic-amd64/dat\r",
+      "ta/standard/FSL_HCP1065_FA_1mm.nii.gz'\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": []
+    }
+   ],
    "source": [
     "MNIFA='/afs/cbs.mpg.de/software/fsl/6.0.3/ubuntu-bionic-amd64/data/standard/FSL_HCP1065_FA_1mm.nii.gz'"
    ]
@@ -436,7 +453,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "part 1 of the transform \"fa_eddy0GenericAffine.mat\"*\n",
+    "part 2 of the transform \"fa_eddy1Warp.nii.gz\"*\n",
+    "part 2 of the inverse transform \"fa_eddy1InverseWarp.nii.gz\"*\n",
+    "subject FA in MNIspace \"fa_eddyWarped.nii.gz\"*\n",
+    "template in subject space \"fa_eddyInverseWarped.nii.gz\"*\n"
+   ]
   },
   {
    "cell_type": "code",
